--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - timeseries_data:/var/lib/postgresql/data
     environment:
-      POSTGES_PASSWORD: secret
+      POSTGRES_PASSWORD: secret
       POSTGRES_USER: user
       POSTGRES_DB: db
 
