--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -6,4 +6,4 @@ COPY ../moex .
 COPY ../logs .
 ENV PYTHONPATH="/app"
 RUN pip install --no-cache-dir -r requirements.txt
-CMD ["python", "app/webapp.py"]
+CMD ["python", "webapp.py"]
