--- a/data_updater/Dockerfile
+++ b/data_updater/Dockerfile
@@ -6,6 +6,6 @@ COPY moex moex
 COPY logs logs
 COPY logger.py .
 COPY tickers.py .
-ENV PYTHONPATH="/updater"
+ENV PYTHONPATH="/data_updater"
 RUN pip install --no-cache-dir -r data_updater/requirements.txt
 CMD ["python", "data_updater/data_updater.py"]
