--- a/services/moex/Dockerfile
+++ b/services/moex/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /moex
 COPY . .
 ENV PYTHONPATH="/moex"
 RUN pip install --no-cache-dir -r requirements.txt
-CMD ["uvicorn", "main:moex_app"]
+CMD ["uvicorn", "main:moex_app", "--port=8001"]
