Добавлено указание порта сервиса

--- a/services/db/Dockerfile
+++ b/services/db/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.13-slim
-WORKDIR /db
+WORKDIR /db_service
 COPY . .
-ENV PYTHONPATH="/db"
+ENV PYTHONPATH="/db_service"
 RUN pip install --no-cache-dir -r requirements.txt
-CMD ["uvicorn", "main::db_manager"]
+CMD ["uvicorn", "main:db_manager", "--port=8002"]
