--- a/services/updater/Dockerfile
+++ b/services/updater/Dockerfile
@@ -7,4 +7,4 @@ WORKDIR /updater
 COPY . .
 ENV PYTHONPATH="/updater"
 RUN pip install --no-cache-dir -r requirements.txt
-CMD ["uvicorn", "main:data_updater", "--port=8003"]
+CMD ["uvicorn", "main:data_updater", "--host=0.0.0.0", "--port=8003"]
