--- a/services/db/Dockerfile
+++ b/services/db/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.13-slim
 WORKDIR /db_service
 COPY . .
+COPY ../../logger.py ./logger.py
 ENV PYTHONPATH="/db_service"
 RUN pip install --no-cache-dir -r requirements.txt
 CMD ["uvicorn", "main:db_manager", "--host=0.0.0.0", "--port=8002"]
