--- a/services/moex/Dockerfile
+++ b/services/moex/Dockerfile
@@ -4,4 +4,4 @@ COPY . .
 COPY ../../logger.py ./logger.py
 ENV PYTHONPATH="/moex"
 RUN pip install --no-cache-dir -r requirements.txt
-CMD ["uvicorn", "main:moex_app", "--host=0.0.0.0", "--port=8001"]
+CMD ["uvicorn", "main:moex", "--host=0.0.0.0", "--port=8001"]
