Переименована папка сервиса

--- a/services/finance_db/Dockerfile
+++ b/services/finance_db/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.13-slim
-WORKDIR /db_service
+WORKDIR /finance_db_servicedb_service
 COPY . .
-ENV PYTHONPATH="/db_service"
+ENV PYTHONPATH="/finance_db_service"
 RUN pip install --no-cache-dir -r requirements.txt
 CMD ["uvicorn", "main:db_manager", "--host=0.0.0.0", "--port=8002"]
