--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - ./logger.py:/web/logger.py
       - ./tickers.py:/web/tickers.py
     depends_on:
-      - db_service
+      - finance_db_service
       - analyzer_service
 
   moex_service:
@@ -20,8 +20,18 @@ services:
       - ./services/moex:/moex
       - ./logger.py:/moex/logger.py
 
-  db:
-    image: timescale/timescaledb:latest-pg17
+  flights_service:
+    build: services/flights
+    ports:
+      - "8005:8005"
+    volumes:
+      - ./services/flights:/flights
+      - ./logger.py:/flights/logger.py
+    depends_on:
+      - finance_db_service
+
+  finance_db:
+    image: timescale/timescalefinance_db:latest-pg17
     ports:
       - "5432:5432"
     volumes:
@@ -29,17 +39,40 @@ services:
     environment:
       POSTGRES_PASSWORD: secret
       POSTGRES_USER: user
-      POSTGRES_DB: db
-
-  db_service:
-    build: services/db
+      POSTGRES_DB: finance_db
+  
+  finance_db_service:
+    build: services/finance_db
     ports:
       - "8002:8002"
     volumes:
-      - ./services/db:/db_service
-      - ./logger.py:/db_service/logger.py
+      - ./services/finance_db:/finance_db_service
+      - ./logger.py:/finance_db_service/logger.py
+      - ./db_manager:/finance_db_service
     depends_on:
-      - db
+      - finance_db
+  
+  electricity_db:
+    image: timescale/timescalefinance_db:latest-pg17
+    ports:
+      - "5433:5433"
+    volumes:
+      - timeseries_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_PASSWORD: secret
+      POSTGRES_USER: user
+      POSTGRES_DB: electricity_db
+
+  electricity_db_service:
+    build: services/electricity_db
+    ports:
+      - "8006:8006"
+    volumes:
+      - ./services/electricity_db:/electricity_db_service
+      - ./logger.py:/electricity_db_service/logger.py
+      - ./db_manager:/electricity_db_service
+    depends_on:
+      - electricity_db  
 
   updater_service:
     build: services/updater
@@ -50,7 +83,8 @@ services:
       - ./logger.py:/updater/logger.py
     depends_on:
       - moex_service
-      - db_service
+      - finance_db_service
+      - flights_service
 
   analyzer_service:
     build: services/analyzer
@@ -60,7 +94,7 @@ services:
       - ./services/analyzer:/analyzer
       - ./logger.py:/analyzer/logger.py
     depends_on:
-      - db_service
+      - finance_db_service
 
 volumes:
   timeseries_data:
